[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/walls-two.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/walls-three.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/walls-one.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Dice.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/head-1.png" type="Texture" id=6]
[ext_resource path="res://Scripts/boss-1-head.gd" type="Script" id=7]
[ext_resource path="res://Assets/health-bar-back.png" type="Texture" id=8]
[ext_resource path="res://Assets/health-bar-front.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 13.4858

[node name="Boss-1" type="Node2D"]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 224 )

[node name="walls-one" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 2, 2, 0, 0, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 20, 0, 1, 21, 0, 1, 22, 0, 1, 23, 0, 1, 24, 0, 1, 25, 0, 1, 26, 0, 1, 27, 0, 2, 28, 0, 0, 29, 0, 2, 65536, 0, 65536, 65537, 0, 65538, 65538, 0, 131072, 65539, 0, 131073, 65540, 0, 131073, 65541, 0, 131073, 65542, 0, 131073, 65543, 0, 131073, 65544, 0, 131073, 65545, 0, 131073, 65546, 0, 131073, 65547, 0, 131073, 65548, 0, 131073, 65549, 0, 131073, 65550, 0, 131073, 65551, 0, 131073, 65552, 0, 131073, 65553, 0, 131073, 65554, 0, 131073, 65555, 0, 131073, 65556, 0, 131073, 65557, 0, 131073, 65558, 0, 131073, 65559, 0, 131073, 65560, 0, 131073, 65561, 0, 131073, 65562, 0, 131073, 65563, 0, 131074, 65564, 0, 65536, 65565, 0, 65538, 131072, 0, 65536, 131073, 0, 65538, 131100, 0, 65536, 131101, 0, 65538, 196608, 0, 65536, 196609, 0, 65538, 196636, 0, 65536, 196637, 0, 65538, 262144, 0, 65536, 262145, 0, 65538, 262172, 0, 65536, 262173, 0, 65538, 327680, 0, 65536, 327681, 0, 65538, 327708, 0, 65536, 327709, 0, 65538, 393216, 0, 65536, 393217, 0, 65538, 393244, 0, 65536, 393245, 0, 65538, 458752, 0, 65536, 458753, 0, 65538, 458780, 0, 65536, 458781, 0, 65538, 524288, 0, 65536, 524289, 0, 65538, 524316, 0, 65536, 524317, 0, 65538, 589824, 0, 65536, 589825, 0, 65538, 589852, 0, 65536, 589853, 0, 65538, 655360, 0, 65536, 655361, 0, 65538, 655388, 0, 65536, 655389, 0, 65538, 720896, 0, 65536, 720897, 0, 65538, 720924, 0, 65536, 720925, 0, 65538, 786432, 0, 65536, 786433, 0, 65538, 786460, 0, 65536, 786461, 0, 65538, 851968, 0, 65536, 851969, 0, 65538, 851996, 0, 65536, 851997, 0, 65538, 917504, 0, 65536, 917505, 0, 65538, 917532, 0, 65536, 917533, 0, 65538, 983040, 0, 65536, 983041, 0, 65538, 983068, 0, 65536, 983069, 0, 65538, 1048576, 0, 65536, 1048577, 0, 65538, 1048604, 0, 65536, 1048605, 0, 65538, 1114112, 0, 65536, 1114113, 0, 65538, 1114140, 0, 65536, 1114141, 0, 65538, 1179648, 0, 65536, 1179649, 0, 65538, 1179650, 0, 0, 1179651, 0, 1, 1179652, 0, 1, 1179653, 0, 1, 1179654, 0, 1, 1179655, 0, 1, 1179656, 0, 1, 1179657, 0, 1, 1179658, 0, 1, 1179659, 0, 1, 1179660, 0, 1, 1179661, 0, 1, 1179662, 0, 1, 1179663, 0, 1, 1179664, 0, 1, 1179665, 0, 1, 1179666, 0, 1, 1179667, 0, 1, 1179668, 0, 1, 1179669, 0, 1, 1179670, 0, 1, 1179671, 0, 1, 1179672, 0, 1, 1179673, 0, 1, 1179674, 0, 1, 1179675, 0, 2, 1179676, 0, 65536, 1179677, 0, 65538, 1245184, 0, 131072, 1245185, 0, 131074, 1245186, 0, 131072, 1245187, 0, 131073, 1245188, 0, 131073, 1245189, 0, 131073, 1245190, 0, 131073, 1245191, 0, 131073, 1245192, 0, 131073, 1245193, 0, 131073, 1245194, 0, 131073, 1245195, 0, 131073, 1245196, 0, 131073, 1245197, 0, 131073, 1245198, 0, 131073, 1245199, 0, 131073, 1245200, 0, 131073, 1245201, 0, 131073, 1245202, 0, 131073, 1245203, 0, 131073, 1245204, 0, 131073, 1245205, 0, 131073, 1245206, 0, 131073, 1245207, 0, 131073, 1245208, 0, 131073, 1245209, 0, 131073, 1245210, 0, 131073, 1245211, 0, 131074, 1245212, 0, 131072, 1245213, 0, 131074 )

[node name="walls-two" parent="." instance=ExtResource( 1 )]

[node name="decorate" parent="." instance=ExtResource( 2 )]

[node name="Dice" type="Node2D" parent="."]

[node name="Dice3" parent="Dice" instance=ExtResource( 5 )]
position = Vector2( 48, 48 )

[node name="Dice6" parent="Dice" instance=ExtResource( 5 )]
position = Vector2( 48, 272 )

[node name="Dice11" parent="Dice" instance=ExtResource( 5 )]
position = Vector2( 432, 48 )

[node name="Dice14" parent="Dice" instance=ExtResource( 5 )]
position = Vector2( 432, 272 )

[node name="boss-health" type="TextureProgress" parent="."]
margin_left = 184.0
margin_top = 272.0
margin_right = 300.0
margin_bottom = 277.0
max_value = 500.0
value = 500.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boss-head" type="Sprite" parent="."]
position = Vector2( 240, 112 )
texture = ExtResource( 6 )
script = ExtResource( 7 )

[node name="boss-collide" type="Area2D" parent="boss-head"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss-head/boss-collide"]
shape = SubResource( 1 )

[node name="MoveTimer" type="Timer" parent="boss-head"]

[node name="ShootTimer" type="Timer" parent="boss-head"]

[node name="Tween" type="Tween" parent="boss-head"]

[node name="StartFight" type="Timer" parent="boss-head"]
[connection signal="timeout" from="boss-head/MoveTimer" to="boss-head" method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="boss-head/ShootTimer" to="boss-head" method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="boss-head/StartFight" to="boss-head" method="_on_StartFight_timeout"]
